program/test/files/Error/scope/double.cps
// Error:
let a = "Hola";
let a = "Adios";


// Error?
let b = "Hola";
{
  let b = "Adios";
}

function Hello(a: string) {
	let a = "Hola";
}